@@ -131,6 +131,8 @@ Release 0.19.0 - Unreleased
    HBASE-1083  Will keep scheduling major compactions if last time one ran, we
                didn't.
    HBASE-1101  NPE in HConnectionManager$TableServers.processBatchOfRows
+   HBASE-1099  Regions assigned while master is splitting logs of recently
+               crashed server; regionserver tries to execute incomplete log
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
